--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
